# UHGEval

./: .gitattributes  .gitignore  CITATION.bib  CITATION.cff  LICENSE  README.md  README.zh_CN.md  config.yaml  demo.ipynb  demo.py  experiment.py  pyproject.toml  requirements.txt  run_uhgeval.py  run_uhgeval_future.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-static.yml  python-package.yml  python-publish.yml  python-tests.yml
data/HalluQA/: HalluQA_mc.json
data/Xinhua/: checksum.md5
docs/: add-bench-or-model.md  architecture.md  experiments.md  index.html
eval/: __init__.py  cli.py  logging.py
eval/benchs/: __init__.py
eval/llms/: base_llm.py  openai_api.py
interface/: analyst.py
output/: overalls.csv
page/: index.html
src/eval_suite/: cli.py  metrics.py  utils.py
statistics/: overalls.csv  overalls_by_type.csv
tests/: test_metrics.py
tests/benchs/: test_base_dataset.py  test_base_evaluator.py
tests/dataset/: test_truthfulqa.py  test_truthfulqaMC.py  test_xinhua.py
tests/llm/: test_api.py  test_base.py  test_gpt.py  test_local.py  test_remote.py
tests/llms/: test_base_llm.py  test_huggingface.py  test_openai_api.py
tests/metric/: test_common.py
tests/test_benchs/: test_base_dataset.py  test_base_evaluator.py
tests/test_llms/: test_base_llm.py  test_huggingface.py  test_openai_api.py
uhgeval/configs/: example_config.py
uhgeval/core/: analyst.py  experiment.py
uhgeval/dataset/: base.py  halluqa.py  halueval.py  truthfulqa.py  xinhua.py
utils/: dataset.py  evaluator.py  llm.py  metric.py
(+82 files in other folders)
